Remove "Current" button

--- a/app.css
+++ b/app.css
@@ -113,7 +113,7 @@ p {
   color: #fff;
 }
 #search-bar {
-  padding: 5px;
+  padding: 5px 120px;
   padding-left: 11px;
   margin-right: 5px;
   background-color: white;
