--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@ h1 {
 .container {
   max-width: fit-content;
   padding: 30px;
-  margin: 90px;
+  margin: 10px;
   background-image: url("https://static.vecteezy.com/system/resources/previews/008/090/703/large_2x/the-blue-sky-in-summer-day-blue-sky-white-clouds-white-clouds-background-nature-weather-of-clear-sky-free-photo.jpg");
   border-radius: 20px;
   box-shadow: 25px 25px 40px 0px rgba(0, 0, 0, 0.33);
@@ -29,7 +29,7 @@ h1 {
 
 .card-heading {
   margin-top: -20px;
-  background: #e8edf962;
+  background: transparent;
   transition: all 200ms ease-in-out;
 }
 .card {
@@ -38,10 +38,17 @@ h1 {
 .card-heading-body {
   text-align: left;
   line-height: 1.5;
-  margin-left: 0;
+  padding: 0;
+  margin-left: 15px;
 }
+
 .card-form {
   background: none;
+}
+
+#location-icon {
+  font-size: 11px;
+  margin: 0 10px;
 }
 
 .col-2:hover {
@@ -74,26 +81,20 @@ h1 {
   margin-top: 1px;
   float: left;
 }
-#button-current {
-  margin-left: 7px;
-}
-#button-submit,
-#button-current,
-#search-bar {
-  border-radius: 2px;
+
+#button-submit {
   padding: 5px 15px;
 
   background-color: #3f66da;
-  border-radius: 5px;
+  border-radius: 17px;
   font-family: arial sans-serif;
   color: #fff;
 }
+
 #search-bar {
-  padding: 5px 120px;
-  padding-left: 11px;
-  margin-right: 5px;
   background-color: white;
-  color: black;
+
+  font-family: arial sans-serif;
 }
 
 .col-2 {
@@ -124,7 +125,13 @@ h1 {
 #col-temp {
   width: 400px;
 }
+#col-cf {
+  margin-right: 20px;
+}
 #col-pre {
   line-height: 1px;
-  margin: 20px 0px 0px 15px;
+  margin: 20px 0;
+}
+.mb-3 {
+  margin-bottom: 0;
 }
