--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 body {
   background: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  margin-left: 5px;
 }
 
 h1 {
@@ -18,6 +19,7 @@ h1 {
   color: #fff;
   overflow: hidden;
   position: relative;
+  background-position-y: bottom;
 }
 
 .weather-forecast {
@@ -46,20 +48,23 @@ h1 {
   background: none;
 }
 
-#location-icon {
-  font-size: 11px;
-  margin: 0 10px;
+.col-2 {
+  margin: 3px;
+  width: fit-content;
+  border-radius: 5px;
+  border: transparent;
+  background: #7aaccf70;
+  transition: -webkit-transform 0ms ease-in-out 0s;
 }
-
 .col-2:hover {
   cursor: pointer;
   background: transparent;
   transform: scale(1.1);
-  background: #fbfbfda5;
+  background: #7aaccfb5;
 }
 .card-heading:hover {
   font-size: larger;
-  background: #fbfbfda5;
+  background: #3e97cf6f;
 }
 .temp {
   font-size: 48px;
@@ -77,34 +82,29 @@ h1 {
   font-family: arial, sans-serif;
 }
 
-#search-tab {
-  margin-top: 1px;
-  float: left;
-}
-
-#button-submit {
-  padding: 5px 15px;
-
-  background-color: #3f66da;
-  border-radius: 17px;
-  font-family: arial sans-serif;
-  color: #fff;
-}
-
 #search-bar {
-  background-color: white;
-
-  font-family: arial sans-serif;
+  padding: 0 80px 0 7px;
 }
-
-.col-2 {
-  margin: 3px;
-  width: fit-content;
-  border-radius: 5px;
+#search-button {
+  background-color: #0b5ed7;
   border: transparent;
-  background: #e8edf962;
-  transition: -webkit-transform 0ms ease-in-out 0s;
 }
+#location-button {
+  background-color: black;
+  border: transparent;
+}
+
+#search-button:hover {
+  background-color: #6390d4;
+}
+#location-button:hover {
+  background-color: #6c757d;
+}
+.fa-solid {
+  color: white;
+  font-size: 14px;
+}
+
 .row {
   margin: -10px 2px 5px;
   color: black;
@@ -125,13 +125,16 @@ h1 {
 #col-temp {
   width: 400px;
 }
-#col-cf {
+#col-temp-degree {
   margin-right: 20px;
 }
-#col-pre {
+#col-temp-variable {
   line-height: 1px;
   margin: 20px 0;
 }
 .mb-3 {
   margin-bottom: 0;
+}
+.forecast-temperature {
+  font-size: 12px;
 }
