--- a/src/app.css
+++ b/src/app.css
@@ -5,21 +5,24 @@ body {
 
 h1 {
   text-transform: capitalize;
-  font-size: 21px;
+  font-size: 60px;
   margin-bottom: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
+.bg-img {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: -1;
+}
 .container {
   max-width: fit-content;
   padding: 30px;
-  margin: 10px;
-  background-image: url("https://static.vecteezy.com/system/resources/previews/008/090/703/large_2x/the-blue-sky-in-summer-day-blue-sky-white-clouds-white-clouds-background-nature-weather-of-clear-sky-free-photo.jpg");
+
   border-radius: 20px;
   box-shadow: 25px 25px 40px 0px rgba(0, 0, 0, 0.33);
-  color: #fff;
-  overflow: hidden;
-  position: relative;
-  background-position-y: bottom;
 }
 
 .weather-forecast {
@@ -78,8 +81,8 @@ h1 {
 .humidity,
 .wind,
 .est_temp {
-  font-size: 14px;
-  font-family: arial, sans-serif;
+  font-size: 16px;
+  font-family: monospace;
 }
 
 #search-bar {
@@ -106,10 +109,10 @@ h1 {
 }
 
 .row {
-  margin: -10px 2px 5px;
+  margin-left: 21px;
   color: black;
-  font-size: 12;
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  font-family: "Courier New", Courier, monospace;
 }
 .degree {
   font-size: 15px;
@@ -143,10 +146,23 @@ h1 {
     margin-right: 35px;
   }
   .container {
-    margin: 0;
-    border-radius: 0;
+    padding: 9px;
+    box-shadow: none;
   }
   .body {
     margin-left: 0;
+  }
+  .card-heading-body {
+    margin: 0;
+  }
+  .row {
+    margin-left: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .bg-img {
+    max-width: fit-content;
+  }
+  a {
+    margin-left: 64px;
   }
 }
