--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,11 @@
 body {
-  background: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  background-color: #e0fefe;
   margin-left: 5px;
 }
-
+a. {
+  text-decoration: none;
+  margin-left: 267px;
+}
 h1 {
   text-transform: capitalize;
   font-size: 60px;
@@ -178,13 +181,23 @@ h1 {
     margin: 0;
   }
   .row {
-    margin-left: 8px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 0px;
+  }
+  .col-2 {
+    padding-left: 7px;
+    padding-right: 7px;
   }
   .bg-img {
     max-width: fit-content;
   }
   a {
     margin-left: 64px;
+  }
+  #weather,
+  #date {
+    font-size: 22px;
+  }
+  .anim-typewriter {
+    width: 20ch;
   }
 }
